# free-whisper-mps-speach-to-text

./: .gitignore  LICENSE  README.md  pyproject.toml
src/whisper_transcribe/: __init__.py  cli.py  core.py  server.py
