[project]
name = "whisper-transcribe"
version = "0.1.0"
description = "Video transcription using OpenAI Whisper with Apple Silicon MPS support"
requires-python = ">=3.12"
dependencies = [
    "openai-whisper",
    "torch",
    "torchvision",
    "torchaudio",
    "rich",
]

[project.scripts]
transcribe = "whisper_transcribe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_transcribe"]
