[project]
name = "whisper-transcribe"
version = "0.3.0"
description = "Audio/video transcription using MLX Whisper, optimized for Apple Silicon. CLI + MCP server."
requires-python = ">=3.12"
dependencies = [
    "mlx-whisper",
    "rich",
    "mcp",
]

[project.scripts]
transcribe = "whisper_transcribe.cli:main"
transcribe-mcp = "whisper_transcribe.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_transcribe"]
